<resources>
    <string name="app_name">Project Notes</string>
    <string name="logo">Logo</string>
    <string name="login_top_img">top img</string>
    <string name="login_bottom_img">bottom img</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="title_activity_main">Project Notes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_new_note">New Note</string>
    <string name="newNote">New Note</string>
    <string name="addNote">Add Note</string>
    <string name="projectNameHint">Project Name</string>
    <string name="projectDescHint">Description</string>
    <string name="projectMessageHint">Message</string>
    <string name="createdHint">Created Date</string>
    <string name="addProject">Add Project</string>
    <string name="authorHint">Author</string>
    <string name="projectStatusHint">Status</string>
    <string name="noteCountHint">Note Count</string>
    <string name="newProject">New Project</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
