<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.suncoastsoftware.projectnotes.New_Note">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="303dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/login_top_img" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/login_bottom_img"
            android:background="@color/offWhite"/>

    <LinearLayout
        android:id="@+id/layout_input"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentDark"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="6dp">

         <Spinner
             android:id="@+id/spinner_projects"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"/>

         <EditText
             android:id="@+id/et_newNote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/newNote"
             android:inputType="textMultiLine" />

         <Spinner
             android:id="@+id/spinner_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />

     </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_margin="6dp">

            <Button
                android:id="@+id/new_note_btn_addNote"
                android:text="@string/addNote"
                android:layout_marginRight="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/new_note_btn_cancel"
                android:text="@string/btn_cancel"
                android:layout_marginLeft="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
