<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight=".25">

            <TextView
                android:id="@+id/view_projects_tv_projectName"
                android:textSize="18sp"
                android:hint="@string/projectNameHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_margin="4dp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/view_projects_tv_projectAuthor"
                android:hint="@string/authorHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/view_projects_tv_projectStatus"
                android:hint="@string/projectStatusHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:id="@+id/view_projects_tv_projectNoteCount"
                android:hint="@string/noteCountHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="vertical"
            android:layout_weight=".75">

            <Button
                android:id="@+id/view_projects_btn_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="View" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>